--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,256 @@
-//
+@import '_variables.scss';
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.main-header,
+.main,
+.blue-section,
+.footer,
+.social-section {
+    width: 1200px;
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 19px 0;
+
+    img.logo {
+        width: 70px;
+        height: 70px;
+    }
+
+    ul {
+        list-style: none;
+        display: flex;
+        margin: 0;
+        padding: $spacing-y 0;
+        gap: 20px;
+
+        a {
+            color: $text-primary;
+            font-weight: 600;
+            margin: ($spacing-y / 2);
+            font-size: 12px;
+
+            &.active {
+                color: $brand-color;
+                border-bottom: 5px solid $brand-color;
+                padding-bottom: $spacing-y * 2;
+            }
+        }
+    }
+}
+
+
+.hero-container {
+    background-image: url(/img/jumbotron.jpg);
+    min-height: 300px;
+    background-size: cover;
+}
+
+
+.main-container {
+    background-color: rgb(34, 34, 34);
+
+    .main {
+        padding: ($spacing-y * 2) 0;
+        position: relative;
+
+        .banner {
+            background-color: $brand-color;
+            padding: ($spacing-y / 5) ($spacing-x);
+            width: fit-content;
+            position: absolute;
+            top: 0;
+            left: - ($spacing-x / 2);
+            transform: translateY(-50%);
+
+            h4 {
+                color: $text-white;
+                font-size: 21px;
+            }
+        }
+
+        .card-container {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: $spacing-x / 2;
+        }
+
+        .card {
+            text-align: left;
+            flex-basis: calc(100% / 6 - 20px);
+            margin-bottom: $spacing-y;
+
+            img {
+                width: 100%;
+                aspect-ratio: 1 / 1;
+                object-fit: cover;
+                object-position: top;
+                margin-bottom: $spacing-x / 3;
+            }
+
+            h5 {
+                color: $text-white;
+                font-size: 12px;
+            }
+        }
+
+        button {
+            background-color: $brand-color;
+            padding: ($spacing-y / 2.5) ($spacing-x * 2);
+            border: none;
+            margin: 0 auto;
+
+            a {
+                color: $text-white;
+                font-size: 12px;
+                font-weight: bold;
+                vertical-align: middle;
+            }
+        }
+    }
+
+    .blue-section-container {
+        padding: ($spacing-y * 2) 0;
+        background-color: $brand-color;
+        font-size: 15px;
+        font-weight: bold;
+    
+        .blue-section {
+            display: flex;
+            justify-content: space-between;
+            gap: 30px;
+    
+            .buy-section {
+                display: flex;
+                align-items: center;
+                color: $text-white;
+                gap: 15px;
+        
+                img {
+                    width: 60px;
+                }
+    
+                &:nth-child(1) {
+                    img {
+                        width: auto;
+                        height: 60px;
+                    }
+                }            
+    
+                &:nth-child(4) {
+                    img {
+                        width: auto;
+                        height: 60px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
+.footer-container {
+    background-image: url(/img/footer-bg.jpg);
+    background-size: cover;
+    padding: ($spacing-y * 2) 0;
+    overflow: hidden;
+    position: relative;
+
+    .list-container {
+        display: flex;
+
+        .list-container-middle,
+        .list-container-right {
+            margin-left: $spacing-x * 1.5;
+        }
+
+        .background-container {
+            position: absolute;
+            transform: translate(600px, -140px);
+        }
+    }
+
+    ul {
+        list-style: none;
+        text-align: left;
+        color: $text-white;
+
+        &:nth-child(1) {
+            margin-bottom: $spacing-y;
+        }
+
+        h3 {
+            font-size: 22px;
+            letter-spacing: -1px;
+            margin-top: 0;
+            margin-bottom: 10px;
+        }
+
+        a {
+            color: rgb(203, 203, 203);
+            font-size: 15px;
+        }
+    }
+}
+
+
+.social-container {
+    background-color: $color-grey;
+    padding: ($spacing-y * 1.5) 0;
+
+    .social-section {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        button {
+            background-color: transparent;
+            border: 2px solid $brand-color;
+            padding: $spacing-x / 1.5;
+
+            a {
+                color: $text-white;
+                font-size: 20px;
+                font-weight: bold;
+            }
+        }
+
+        .social-icons {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: $spacing-x;
+
+            img {
+                width: 40px;
+            }
+
+            .follow {
+                color: $brand-color;
+                font-size: 20px;
+                font-weight: bold;
+            }
+        }
+    }
+}
